--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,4 +1,6 @@
 [global_config]
+  borderless = True
+  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   focus = mouse
   title_font = Source Code Pro for Powerline Medium 10
   title_transmit_bg_color = "#d30102"
@@ -20,6 +22,8 @@
     cursor_color = "#ffc200"
     font = Source Code Pro for Powerline Medium 10
     foreground_color = "#eee8d5"
+    icon_bell = False
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     show_titlebar = False
+    urgent_bell = True
     use_system_font = False
