--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -2,8 +2,13 @@
   borderless = True
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   focus = mouse
-  title_font = Source Code Pro for Powerline Medium 10
-  title_transmit_bg_color = "#d30102"
+  title_font = SauceCodePro NF Medium 10
+  title_inactive_bg_color = "#4C566A"
+  title_inactive_fg_color = "#D8DEE9"
+  title_receive_bg_color = "#8FBCBB"
+  title_receive_fg_color = "#2E3440"
+  title_transmit_bg_color = "#88C0D0"
+  title_transmit_fg_color = "#2E3440"
   title_use_system_font = False
 [keybindings]
 [layouts]
@@ -18,12 +23,12 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#002b36"
-    cursor_color = "#ffc200"
+    background_color = "#2e3440"
+    cursor_color = "#D8DEE9"
     font = Source Code Pro for Powerline Medium 10
-    foreground_color = "#eee8d5"
+    foreground_color = "#d8dee9"
     icon_bell = False
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
     show_titlebar = False
     urgent_bell = True
     use_system_font = False
